日志实现方式调整